# mantid-conda-test

./: CMakeLists.txt  README.md  framework-test.yml  main.cpp
